--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-torch==1.12.0+cu113
+torch~=1.14.0.dev20221119+cu116
 transformers=4.18.0
 scikit-learn==1.1.2
 tree_sitter==0.19.0
 accelerate==0.15.0
+transformers~=4.18.0
+dataset~=1.5.2
+numpy~=1.23.4
+tqdm~=4.64.1
